[package]
name = "carlo"
version = "0.2.0"
authors = ["Davide Mancusi <davide.mancusi@cea.fr>"]
edition = "2021"

[dependencies]
irc = "0.13.0"
log = "0.4.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = "1.0.0"
serde_derive = "1.0.0"
simplelog = "0.5.0"
toml = "0.4.0"

[dev-dependencies]
proptest = "0.8.0"
